test/netlist/error/nested-block-size.bop
A(a, b) = (c, d)
where
  c = And(a, b);
  d = Or(a, b);
end where;

N(a) = b
where
  b = Not(a);
end where;

B(a, b) = c
where
  c = N(A(a, b));
end where;
